jsinterop-ts-defs-processor/src/test/resources/errors/members/JsTypeWithPublicFieldAndPublicAccessor.java
package com.vertispan.tsdefs.types;

import jsinterop.annotations.*;

@JsType
public class JsTypeWithPublicFieldAndPublicAccessor {
    public String member0;

    public String getMember0() {
        return member0;
    }
}